plugins {
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'java'
	id "org.sonarqube" version "5.1.0.4882"
	id 'checkstyle'
	id 'jacoco'
}

group = 'uk.co.nstauthority'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

def fileUploadLibraryVersion = 'v3.0.0'

repositories {
	mavenCentral()
	maven {
		// Required for opensaml deps
		url "https://build.shibboleth.net/nexus/content/repositories/releases/"
	}
	maven { url "https://nexus.fivium.co.uk/repository/maven-releases/" }
	maven { url "https://nexus.fivium.co.uk/repository/maven-snapshots/" }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-saml2-service-provider'
	implementation "org.springframework.session:spring-session-core"
	implementation "org.springframework.session:spring-session-jdbc"
	implementation "org.springframework.data:spring-data-envers"
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'uk.co.fivium.energyportalapi:client:v16.1.1'
	implementation 'uk.co.fivium.energyportalmessagequeue:spring-boot-starter:v4.3.0'
	implementation 'uk.co.fivium.energyportal.accounts:energy-portal-accounts-spring-boot-starter:v3.0.0'
	implementation 'uk.co.fivium.digitalformlibrary:digital-form-library:v3.0.0'
	implementation "uk.co.fivium:file-upload-spring-boot-starter:${fileUploadLibraryVersion}"
// TODO re-add when payments required
//	implementation 'uk.co.fivium:digital-payments-library-spring-boot-starter:1.0.0'
	implementation 'uk.co.fivium.feedbackmanagementservice:client:v2.3.0'
	implementation 'org.apache.commons:commons-lang3:3.18.0'
	implementation 'org.apache.commons:commons-collections4:4.4'
	implementation 'org.apache.commons:commons-text:1.13.0'
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.6.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.6.0'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.2'

	runtimeOnly 'org.postgresql:postgresql'

	testImplementation "uk.co.fivium:file-upload-spring-boot-starter-test:${fileUploadLibraryVersion}"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	testImplementation "org.testcontainers:testcontainers"
	testImplementation "org.testcontainers:postgresql"
}

tasks {
	test {
		useJUnitPlatform()
		finalizedBy jacocoTestReport
		systemProperty 'spring.profiles.active', 'test'
		maxParallelForks 4
	}
	bootJar {
		archiveFileName.set("${rootProject.name}.jar")
		exclude('**/localdevonly/**')
	}
}

sonarqube {
	properties {
		property 'sonar.projectKey', "Fivium_${rootProject.name}"
		property 'sonar.organization', 'fivium-gh'
		property 'sonar.host.url', 'https://sonarcloud.io'
		property 'sonar.login', System.getenv('SONARCLOUD_TOKEN')

		if (System.getenv('DRONE_PULL_REQUEST') != null) {
			property 'sonar.pullrequest.key', System.getenv('DRONE_PULL_REQUEST')
			property 'sonar.pullrequest.base', System.getenv('DRONE_TARGET_BRANCH')
			property 'sonar.pullrequest.branch', System.getenv('DRONE_SOURCE_BRANCH')
			property 'sonar.pullrequest.provider', 'github'
			property 'sonar.pullrequest.github.repository', "${rootProject.name}"
			property 'sonar.pullrequest.github.endpoint', 'https://api.github.com/'
		} else {
			property 'sonar.branch.name', System.getenv('DRONE_BRANCH')
			if (System.getenv('DRONE_BRANCH') != 'develop') {
				property 'sonar.branch.target', 'develop'
			}
			property 'sonar.coverage.jacoco.xmlReportPaths', "${layout.buildDirectory}/reports/jacoco/test/jacocoTestReport.xml"
		}
	}
}

checkstyle {
	config = rootProject.resources.text.fromFile('devtools-lms/checkstyle.xml')
	toolVersion '10.26.0'
	ignoreFailures = false
	maxWarnings = 0
}

jacocoTestReport {
	reports {
		xml.required = true
	}
}